--- a/common-auth/src/main/resources/application.yml
+++ b/common-auth/src/main/resources/application.yml
@@ -1,12 +1,34 @@
+#spring:
+#  application:
+#    name: oauth2-server
+#  security:
+#    user:
+#      # 账号
+#      name: root
+#      # 密码
+#      password: 123456
+#
+#server:
+#  port: 8080
 spring:
   application:
     name: oauth2-server
-  security:
-    user:
-      # 账号
-      name: root
-      # 密码
-      password: 123456
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    jdbc-url: jdbc:mysql://119.29.107.83:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://119.29.107.83:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: xsg435268
+    hikari:
+      minimum-idle: 5
+      idle-timeout: 600000
+      maximum-pool-size: 10
+      auto-commit: true
+      pool-name: MyHikariCP
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
 
 server:
   port: 8080
