--- a/common_depens/pom.xml
+++ b/common_depens/pom.xml
@@ -58,6 +58,11 @@
                 <version>8.0.11</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>2.1.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
