资源服务器的完成

--- a/common_resources/pom.xml
+++ b/common_resources/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common-auth</artifactId>
+    <artifactId>common-resources</artifactId>
     <url>http://www.funtl.com</url>
 
     <licenses>
@@ -107,7 +107,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.funtl.oauth2.OAuth2ServerApplication</mainClass>
+                    <mainClass>com.funtl.oauth2.OAuth2ResourcesApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
