--- a/common_depens/pom.xml
+++ b/common_depens/pom.xml
@@ -22,9 +22,9 @@
 
     <developers>
         <developer>
-            <id>liwemin</id>
-            <name>Lusifer Lee</name>
-            <email>lee.lusifer@gmail.com</email>
+            <id>xsg</id>
+            <name>X s</name>
+            <email>1069342827@qq.com</email>
         </developer>
     </developers>
 
